saopaulo/21-alb.tf

############################################
# Application Load Balancer
############################################

# Explanation: The ALB is your public customs checkpoint — it speaks TLS and forwards to private targets.
resource "aws_lb" "bos_alb01" {
  name               = "${var.project_name}-alb01"
  load_balancer_type = "application"
  internal           = false
  #security_groups    = [aws_security_group.bos_alb_sg01.id] 
  subnets = aws_subnet.bos_public_subnets[*].id

  # access_logs {
  #   bucket  = aws_s3_bucket.bos_alb_logs_bucket01[0].bucket
  #   prefix  = "alb-logs"
  #   enabled = true
  # }

  security_groups = [
    aws_security_group.bos_alb_sg01.id
  ]


  # depends_on = [
  #   aws_s3_bucket_policy.bos_alb_logs_policy01[0],
  #   aws_s3_bucket_ownership_controls.bos_alb_logs_owner01[0]
  # ]



  tags = {
    Name = "${var.project_name}-alb01"
  }

  # depends_on = [
  #   aws_s3_bucket_policy.alb_logs_policy,
  #   aws_s3_bucket_ownership_controls.alb_logs,
  #   aws_s3_bucket_server_side_encryption_configuration.alb_logs_sse
  # ]
}

############################################
# ALB Listeners: HTTP -> HTTPS redirect, HTTPS -> TG
############################################

# Explanation: HTTP listener is the decoy airlock — it redirects everyone to the secure entrance.
resource "aws_lb_listener" "bos_http_listener01" {
  load_balancer_arn = aws_lb.bos_alb01.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type = "redirect"
    redirect {
      port        = "443"
      protocol    = "HTTPS"
      status_code = "HTTP_301"
    }
  }
}

# Explanation: HTTPS listener is the real hangar bay — TLS terminates here, then traffic goes to private targets.
resource "aws_lb_listener" "bos_https_listener01" {
  load_balancer_arn = aws_lb.bos_alb01.arn
  port              = 443
  protocol          = "HTTPS"
  ssl_policy        = "ELBSecurityPolicy-TLS13-1-2-2021-06"
  certificate_arn   = aws_acm_certificate.bowtiez_cert.arn

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.bos_tg01.arn
  }

  # depends_on = [aws_acm_certificate_validation.bowtiez_acm_validation01_dns_bonus]
}
